<?xml version="1.0"?>
<package format="2">
  <name>g2s_planner</name>
  <version>1.1.3</version>
  <description>Global guidance system for path planning in 2D and 3D maps.</description>

  <maintainer email="jakeware@mit.edu">Jake Ware</maintainer>
  <author>Jake Ware</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>fla_utils</depend>
  <depend>tf2_ros</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
